--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
         <script src="Dependancies/p5/p5.js"></script>
     </head>
     <body>
-        <script src="settings.js>"></script>
-        
+        <script src="settings.js"></script>
+
         <script src="canvas.js"></script>
         <script src="road.js"></script>
         <script src="car.js"></script>
 
         <script src="neural-net.js"></script>
         <script src="evolution.js"></script>
+
+       
     </body>
 </html>
