Created car and sensor objects

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <body>
         <script src="settings.js"></script>
 
-        <script src="canvas.js"></script>
         <script src="road.js"></script>
         <script src="car.js"></script>
+        <script src="sensor.js"></script>
 
         <script src="neural-net.js"></script>
         <script src="evolution.js"></script>
-
-       
+        
+        <script src="canvas.js"></script>
     </body>
 </html>
