Added neuroevolution and a second map

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     </head>
     <body>
         <script src="settings.js"></script>
-
-        <script src="road.js"></script>
+        <script src="boundary.js"></script>
         <script src="car.js"></script>
         <script src="sensor.js"></script>
 
         <script src="neural-net.js"></script>
         <script src="evolution.js"></script>
         
-        <script src="canvas.js"></script>
+        <script src="sketch.js"></script>
     </body>
 </html>
