Added performance chart
Added the performance chart using charts.js
More refinements to the fitness function
Improvements to the interface including ability to toggle sensor display

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
     <head>
         <title>Roman Road</title>
-        <script src="Dependancies/tensorflow/tf.min"></script>
+        <script src="Dependancies/tensorflow/tf.min.js"></script>
         <script src="Dependancies/p5/p5.js"></script>
+        <script src="Dependancies/chart.min.js"></script>
     </head>
     <body>
         <script src="settings.js"></script>
@@ -15,5 +16,8 @@
         <script src="evolution.js"></script>
         
         <script src="sketch.js"></script>
+        <div id="p5"></div>
+        <div height="25%"><canvas id="chart"></canvas></div>
+        <script src="chart-performance.js"></script>
     </body>
 </html>
